FC-105 - invokes inefficient construction of primitive